user can post and receive posts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "rm -rf dist && babel server -d dist",
+    "build": "rm -rf dist && babel server -d dist --copy-files",
     "heroku-postbuild": "npm run build",
     "start": "node ./dist/app.js",
     "start:dev": "npm run build && npm start",
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.14.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
