--- a/server/config/config.json
+++ b/server/config/config.json
@@ -5,7 +5,7 @@
     "logging": false
   },
   "production": {
-    "use_env_variable": "PRODUCTION_DATABASE_URL",
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres"
   }
 }
